--- a/web-app/styles.css
+++ b/web-app/styles.css
@@ -1,8 +1,3 @@
-:root {
-    --white: white;
-    --grey: grey;
-}
-
 .chart-container {
     position: relative;
     width:95vw;
@@ -21,14 +16,19 @@
 }
 
 #needs-daemon-restart {
-    background: var(--white);
+    color: var(--dark);
+    background-color: var(--light);
     max-width: 350px;
     padding: 1em;
-    border: 1px solid var(--grey);
+    border: 1px solid var(--dark);
     position: fixed;
     top: 10px;
     right: 10px;
-    -moz-box-shadow:    2px 2px 5px 1px var(--grey);
-    -webkit-box-shadow: 2px 2px 5px 1px var(--grey);
-    box-shadow:         2px 2px 5px 1px var(--grey);
+    -moz-box-shadow:    2px 2px 5px 1px var(--dark);
+    -webkit-box-shadow: 2px 2px 5px 1px var(--dark);
+    box-shadow:         2px 2px 5px 1px var(--dark);
+}
+
+.mt-8, .my-8 {
+    margin-top: 3rem !important;
 }
