--- a/web-app/styles.css
+++ b/web-app/styles.css
@@ -54,3 +54,12 @@
 td .form-group {
     margin-bottom: 0;
 }
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+th, td {
+    padding: 6px;
+}
