Balance Status graphic in web UI (Status page), when --balance is ongoing

--- a/web-app/styles.css
+++ b/web-app/styles.css
@@ -71,6 +71,9 @@
 .sp-bar.free {
     background-color: rgba(72, 143, 49, 1);
 }
+.sp-bar.target {
+    background-color: rgba(205, 205, 205, 1);
+}
 .sp-bar.treemap:not(.nolink) {
     cursor: pointer;
 }
