--- a/web-app/styles.css
+++ b/web-app/styles.css
@@ -109,3 +109,26 @@ table#queue td.num.nonzero {
 table#queue tr.total td {
     font-weight: bolder;
 }
+
+#past-tasks-table {
+    width: 100% !important;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    background: inherit;
+    border: 1px solid transparent;
+}
+table.dataTable tbody tr {
+    background: inherit;
+}
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+    color: inherit;
+}
+body.dark .custom-select, body.dark .dataTables_wrapper .dataTables_filter input {
+    color: #fff;
+}
+body.dark .dataTables_wrapper .dataTables_processing {
+    background: #272b30;
+}
+.dataTables_wrapper .dataTables_processing {
+    padding-top: 6px;
+}
