New: toggle to follow (tail) log in Greyhole Admin | Status; will refresh the "Recent log entries" every 10 secs

--- a/web-app/styles.css
+++ b/web-app/styles.css
@@ -132,3 +132,8 @@ body.dark .dataTables_wrapper .dataTables_processing {
 .dataTables_wrapper .dataTables_processing {
     padding-top: 6px;
 }
+
+body.dark .custom-control-input:checked ~ .custom-control-label::before {
+    border-color: #62c462;
+    background-color: #62c462;
+}
